[tool.poetry]
name = "y2b"
version = "0.1.0"
description = ""
authors = ["Leo Zhou <glasslion@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6"
click = "^7.0"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.2"
black = {version = "^18.3-alpha.4",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
